--- a/front/index.html
+++ b/front/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Données des stocks</h1>
-    <!-- Tableau modifiable -->
+    <!-- dataTable modifiable -->
       <table id="dataTable">
           <thead>
               <tr>
@@ -37,6 +37,22 @@
       <canvas id="myChart" width="400" height="400"></canvas>
 
       <script>
+        // Récupérer les données JSON
+        const jsonData = [
+          { "colonne1": "Valeur 1", "colonne2": 10, "colonne3": 20 },
+          { "colonne1": "Valeur 2", "colonne2": 15, "colonne3": 25 },
+          { "colonne1": "Valeur 3", "colonne2": 20, "colonne3": 30 }
+        ];
+
+        // Générer le dataTable à partir du JSON
+        const dataTable = document.getElementById("dataTable");
+        const tbody = dataTable.getElementsByTagName("tbody")[0];
+        jsonData.forEach(data => {
+          const row = document.createElement("tr");
+          row.innerHTML = `<td>${data.colonne1}</td><td>${data.colonne2}</td><td>${data.colonne3}</td>`;
+          tbody.appendChild(row);
+        });
+
           document.addEventListener('DOMContentLoaded', (event) => {
             const ctx = document.getElementById('myChart').getContext('2d');
             const chart = new Chart(ctx, {
@@ -44,19 +60,19 @@
                 type: 'line',
                 // Les données pour notre dataset
                 data: {
-                    labels: ['Janvier', 'Février'], // Mettez à jour ces étiquettes en fonction des lignes du tableau
+                    labels: ['Janvier', 'Février'], // Mettez à jour ces étiquettes en fonction des lignes du dataTable
                     datasets: [{
                         label: 'Exemple de données',
                         backgroundColor: 'rgb(255, 99, 132)',
                         borderColor: 'rgb(255, 99, 132)',
-                        data: [10, 20] // Mettez à jour ces valeurs en fonction des cellules du tableau
-                    }]
+                        data: [10, 20] // Mettez à jour ces valeurs en fonction des cellules du dataTable
+                    }],
                 },
                 // Configuration des options
                 options: {}
             });
 
-            // Fonction pour mettre à jour le graphique en fonction des modifications du tableau
+            // Fonction pour mettre à jour le graphique en fonction des modifications du dataTable
             function updateChart() {
                 const rows = document.querySelectorAll('#dataTable tbody tr');
                 chart.data.labels = [];
@@ -71,7 +87,7 @@
                 chart.update();
             }
 
-            // Écouteur d'événements pour détecter les modifications du tableau
+            // Écouteur d'événements pour détecter les modifications du dataTable
             document.querySelector('#dataTable tbody').addEventListener('input', updateChart);
         });
       </script>
