--- a/front/index.html
+++ b/front/index.html
@@ -22,12 +22,6 @@
                   <td>15</td>
                   <td>12</td>
                   <td>27</td>
-                  <td>32</td>
-                  <td>33</td>
-                  <td>24</td>
-                  <td>37</td>
-                  <td>15</td>
-                  <td>02</td>
 
               </tr>
               <tr>
@@ -36,12 +30,6 @@
                   <td>27</td>
                   <td>10</td>
                   <td>15</td>
-                  <td>05</td>
-                  <td>03</td>
-                  <td>18</td>
-                  <td>26</td>
-                  <td>30</td>
-                  <td>21</td>
 
               </tr>
               <!-- Ajoutez plus de données ici -->
@@ -59,18 +47,18 @@
                 type: 'line',
                 // Les données pour notre dataset
                 data: {
-                    labels: ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10', '11', '12'], // Mettez à jour ces étiquettes en fonction des lignes du tableau
+                    labels: ['01', '02', '03', '04'], // Mettez à jour ces étiquettes en fonction des lignes du tableau
                     datasets: [{
                         label: 'CAC40',
                         backgroundColor: 'rgb(255, 99, 132)',
                         borderColor: 'rgb(255, 99, 132)',
-                        data: [10, 15, 12, 27, 32, 33, 24, 37, 15, 2] // Mettez à jour ces valeurs en fonction des cellules du tableau
+                        data: [10, 15, 12, 27] // Mettez à jour ces valeurs en fonction des cellules du tableau
                     },
                     {
                         label: 'Nasdaq',
                         backgroundColor: 'rgb(89, 99, 132)',
                         borderColor: 'rgb(89, 99, 132)',
-                        data: [20, 27, 10, 15, 5, 3, 18, 26, 30, 21] // Mettez à jour ces valeurs en fonction des cellules du tableau
+                        data: [20, 27, 10,] // Mettez à jour ces valeurs en fonction des cellules du tableau
                     }]
                 },
                 // Configuration des options
